# ESPOL-coughvid-project

./: .gitignore  README.md  pyproject.toml
app/: README.md  constants.py  models.py  streamlit_front.py  utils.py
app/samples/: tos_sin_covid.m4a
models/: model_0.py
notebooks/: config.py  google_colab_notebook.ipynb  ideas_redes_convolucionales.ipynb  regresion_lineal_via_GD.ipynb  regresion_logistica_via_GD.ipynb  train.ipynb  training_a_model_mfccs.ipynb
replicas/proyecto_replica_0/: 001_prepare_data.ipynb  002_training.ipynb  003_inference.ipynb  004_k_fold_cross_validation.ipynb  005_evaluate_other_classifier.ipynb  006_cnn_approach.ipynb  007_cnn_approach.ipynb  utils.py
utils/: load_metadata.py  load_spectrograms.py  preprocessing.py  utils.py
